samples/_failures_safe/1761558735_9916a7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3807f8ba.c: In function ‘main’:
./samples/SAFE/__tmp_3807f8ba.c:143:24: error: expected ‘;’ at end of input
  143 |         cleanup_context
      |                        ^
      |                        ;
./samples/SAFE/__tmp_3807f8ba.c:143:9: error: expected declaration or statement at end of input
  143 |         cleanup_context
      |         ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_3807f8ba.c:143:9: error: expected declaration or statement at end of input
